Fixed banner wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.textContainer
+{
+  height: 10rem;
+  width: 62rem;
+}
+@media only screen and (max-width: 600px) {
+.textContainer
+{
+  height: 20rem;
+  width: 100%;
+}
 
+}
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
